Update RN docs for release v1.0.5

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1074,6 +1074,15 @@ where 100 means the least quality loss.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="105">1.0.5</h5>
+<ul>
+  <li>Android &amp; iOS:
+    <ul>
+      <li>Improvement: Add default style to <code class="highlighter-rouge">ScanbotCameraView</code> and <code class="highlighter-rouge">ScanbotCroppingView</code>.</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="104">1.0.4</h5>
 <ul>
   <li>Android:
