--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -970,6 +970,11 @@ Which means a renewal or extension of a license will cause a new license key str
 
 <h3 id="release-history">Release history</h3>
 
+<h5 id="scanbotsdkxamarinios-114">ScanbotSDK.Xamarin.iOS 1.1.4</h5>
+<ul>
+  <li>Bugfix in PDF creation of SBSDK Wrapper. Switched to native class SBSDKPDFRenderer.</li>
+</ul>
+
 <h5 id="scanbotsdkxamarinandroid-130">ScanbotSDK.Xamarin.Android 1.3.0</h5>
 <ul>
   <li>Upgraded the native Scanbot Android SDK to v1.26.2</li>
