Update Cordova docs for release v1.6.0

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -89,24 +89,16 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
 
 <h4 id="tools">Tools</h4>
 <ul>
-  <li>
-    <p>Node.js, npm</p>
-  </li>
-  <li>
-    <p>Cordova CLI 6.x+ (recommended 7.x+)</p>
-
-    <p>Cordova Platforms:</p>
+  <li>Node.js, npm</li>
+  <li>Cordova CLI 6.x+ (recommended 7.x+)</li>
+  <li>Cordova Platforms:
     <ul>
       <li><a href="https://www.npmjs.com/package/cordova-android">cordova-android</a> <strong>6.x+</strong> (recommended 7.x)</li>
       <li><a href="https://www.npmjs.com/package/cordova-ios">cordova-ios</a> <strong>4.4.0+</strong> (recommended 4.5.x)</li>
     </ul>
   </li>
-  <li>
-    <p>Android SDK (API Level 16+), Platforms and Developer Tools (for Android Apps)</p>
-  </li>
-  <li>
-    <p>Xcode + Xcode Command Line Tools (for iOS Apps)</p>
-  </li>
+  <li>Android SDK (API Level 16+), Platforms and Developer Tools (for Android Apps)</li>
+  <li>Xcode + Xcode Command Line Tools (for iOS Apps)</li>
 </ul>
 
 <h4 id="supported-mobile-platforms">Supported Mobile Platforms</h4>
