Update Cordova docs for release v1.6.0

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -152,7 +152,7 @@ do not support auto configuration for “Embedded Binaries” in the Xcode proje
 
 <p>👍 If you are using <code class="highlighter-rouge">cordova-ios@4.4.0</code> or higher in your project, everything should be fine after the plugin installation.</p>
 
-<p>‼️ If you are using an older version of <code class="highlighter-rouge">cordova-ios</code>, you have to <strong>apply following manual settings</strong> after the plugin installation:</p>
+<p>⚠️ If you are using an older version of <code class="highlighter-rouge">cordova-ios</code>, you have to <strong>apply following manual settings</strong> after the plugin installation:</p>
 
 <ul>
   <li>
