--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -970,9 +970,15 @@ Which means a renewal or extension of a license will cause a new license key str
 
 <h3 id="release-history">Release history</h3>
 
+<h5 id="scanbotsdkxamarinios-115">ScanbotSDK.Xamarin.iOS 1.1.5</h5>
+<ul>
+  <li>Various bug fixes in <code class="highlighter-rouge">SBSDKImageEditingViewController</code></li>
+  <li>Requires Visual Studio for Mac 7.4+</li>
+</ul>
+
 <h5 id="scanbotsdkxamarinios-114">ScanbotSDK.Xamarin.iOS 1.1.4</h5>
 <ul>
-  <li>Bugfix in PDF creation of SBSDK Wrapper. Switched to native class SBSDKPDFRenderer.</li>
+  <li>Bug fix in PDF creation of SBSDK Wrapper. Switched to native class SBSDKPDFRenderer.</li>
 </ul>
 
 <h5 id="scanbotsdkxamarinandroid-130">ScanbotSDK.Xamarin.Android 1.3.0</h5>
