Update RN docs for release v1.0.7

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1074,6 +1074,20 @@ where 100 means the least quality loss.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="107">1.0.7</h5>
+<ul>
+  <li>iOS:
+    <ul>
+      <li>Bugfix: Fixed a crash in the <code class="highlighter-rouge">onPolygonDetected</code> callback of <code class="highlighter-rouge">ScanbotCameraView</code>.</li>
+    </ul>
+  </li>
+  <li>Android:
+    <ul>
+      <li>Bugfix: Fixed the field name <code class="highlighter-rouge">detectionResult</code> in the <code class="highlighter-rouge">onPolygonDetected</code> callback result of <code class="highlighter-rouge">ScanbotCameraView</code> according to the API.</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="106">1.0.6</h5>
 <ul>
   <li>Android:
