--- a/cordova/index.html
+++ b/cordova/index.html
@@ -90,7 +90,7 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
 <h4 id="tools">Tools</h4>
 <ul>
   <li>Node.js, npm</li>
-  <li>Cordova CLI 6.x+ (recommended 7.x+)</li>
+  <li>Cordova CLI or PhoneGap CLI, both 6.x+ (recommended 7.x+)</li>
   <li>Cordova Platforms:
     <ul>
       <li><a href="https://www.npmjs.com/package/cordova-android">cordova-android</a> <strong>6.x+</strong> (recommended 7.x)</li>
@@ -100,6 +100,10 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
   <li>Android SDK (API Level 16+), Platforms and Developer Tools (for Android Apps)</li>
   <li>Xcode + Xcode Command Line Tools (for iOS Apps)</li>
 </ul>
+
+<h4 id="cordova-vs-phonegap">Cordova vs. PhoneGap</h4>
+<p>Since <em>Adobe PhoneGap</em> is based on <em>Apache Cordova</em> the Scanbot SDK Cordova Plugin is fully compatible with PhoneGap.
+So you can also use all features of this Plugin in your PhoneGap app.</p>
 
 <h4 id="supported-mobile-platforms">Supported Mobile Platforms</h4>
 
@@ -111,8 +115,9 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
 <p>Please note:</p>
 <ul>
   <li>The Scanbot SDK Plugin is available only for Android and iOS</li>
-  <li>The plugin <strong>does not work</strong> on other platforms like Windows Phone, Desktop or WebApps</li>
   <li>We <strong>don’t support</strong> rooted Android devices (custom ROMs)</li>
+  <li>This Plugin <strong>does not work</strong> on other platforms like Windows Phone, Desktop or Web Apps</li>
+  <li>Also, the Plugin <strong>does not work</strong> in a Progressive Web App (PWA)</li>
 </ul>
 
 <h4 id="hardware">Hardware</h4>
@@ -125,12 +130,22 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
 <p>While it is possible to test your App with the Scanbot SDK Plugin on simulators/emulators, we strongly recommend to use real Android/iOS devices. 
 Depending on the emulated Camera you may not be able to test/evaluate the full functionality of the Scanbot SDK Plugin.</p>
 
+<h4 id="serve-mode">Serve Mode</h4>
+
+<p>It is <strong>not possible</strong> to test or preview the features of the Scanbot SDK Cordova Plugin within the <em>PhoneGap Developer App</em>.</p>
+
+<p>It is also <strong>not possible</strong> to test or preview the Scanbot SDK Cordova Plugin in a desktop browser.</p>
+
+<p>Or in other words, the Cordova serve mode <code class="highlighter-rouge">cordova serve</code> as well as the PhoneGap serve mode <code class="highlighter-rouge">phonegap serve</code> <strong>will not work</strong>! 
+You have to build your app and deploy it on the target mobile device.</p>
+
 <h3 id="example-apps">Example Apps</h3>
 
 <p>Check out our Example Apps on GitHub:</p>
 
 <ul>
   <li>Plain Cordova App: <a href="https://github.com/doo/scanbot-sdk-example-cordova">https://github.com/doo/scanbot-sdk-example-cordova</a></li>
+  <li>Plain PhoneGap App: <a href="https://github.com/doo/scanbot-sdk-example-phonegap">https://github.com/doo/scanbot-sdk-example-phonegap</a></li>
   <li>Ionic 1 App: <a href="https://github.com/doo/scanbot-sdk-example-ionic1">https://github.com/doo/scanbot-sdk-example-ionic1</a></li>
   <li>Ionic 2+ App: <a href="https://github.com/doo/scanbot-sdk-example-ionic2">https://github.com/doo/scanbot-sdk-example-ionic2</a></li>
 </ul>
