Update RN docs for release v1.0.8

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1074,6 +1074,15 @@ where 100 means the least quality loss.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="108">1.0.8</h5>
+<ul>
+  <li>Android &amp; iOS:
+    <ul>
+      <li>Fixed npm <code class="highlighter-rouge">peerDependencies</code>.</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="107">1.0.7</h5>
 <ul>
   <li>iOS:
