--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -970,6 +970,19 @@ Which means a renewal or extension of a license will cause a new license key str
 
 <h3 id="release-history">Release history</h3>
 
+<h5 id="scanbotsdkxamarinandroid-133">ScanbotSDK.Xamarin.Android 1.3.3</h5>
+<ul>
+  <li>Upgraded the native Scanbot Android SDK to v1.28.3</li>
+  <li>Provided the possibility to reinitialize the Scanbot SDK</li>
+  <li>Various bug fixes in <code class="highlighter-rouge">EditPolygonImageView</code> and <code class="highlighter-rouge">MagnifierView</code></li>
+</ul>
+
+<h5 id="scanbotsdkxamarinandroid-132">ScanbotSDK.Xamarin.Android 1.3.2</h5>
+<ul>
+  <li>Upgraded the native Scanbot Android SDK to v1.27.3</li>
+  <li>Various bug fixes and improvements</li>
+</ul>
+
 <h5 id="scanbotsdkxamarinios-115">ScanbotSDK.Xamarin.iOS 1.1.5</h5>
 <ul>
   <li>Various bug fixes in <code class="highlighter-rouge">SBSDKImageEditingViewController</code></li>
