Update links of exaple apps.

--- a/cordova/v1.x/index.html
+++ b/cordova/v1.x/index.html
@@ -150,7 +150,7 @@ You have to build your app and deploy it on the target mobile device.</p>
   <li>Plain Cordova App: <a href="https://github.com/doo/scanbot-sdk-example-cordova">https://github.com/doo/scanbot-sdk-example-cordova</a></li>
   <li>Plain PhoneGap App: <a href="https://github.com/doo/scanbot-sdk-example-phonegap">https://github.com/doo/scanbot-sdk-example-phonegap</a></li>
   <li>Ionic 1 App: <a href="https://github.com/doo/scanbot-sdk-example-ionic1">https://github.com/doo/scanbot-sdk-example-ionic1</a></li>
-  <li>Ionic 2+ App: <a href="https://github.com/doo/scanbot-sdk-example-ionic2">https://github.com/doo/scanbot-sdk-example-ionic2</a></li>
+  <li>Ionic 2+ App: <a href="https://github.com/doo/scanbot-sdk-example-ionic2/tree/sdk-plugin-v1.x">https://github.com/doo/scanbot-sdk-example-ionic2/tree/sdk-plugin-v1.x</a></li>
 </ul>
 
 <h3 id="installation">Installation</h3>
