Update corodva plugin docs for the v2.0.0 release

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -97,7 +97,7 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
   <li>Cordova CLI or PhoneGap CLI, both 6.x+ (recommended 7+)</li>
   <li>Cordova Platforms:
     <ul>
-      <li><a href="https://www.npmjs.com/package/cordova-android">cordova-android</a> <strong>6.x+</strong> (recommended 7+)</li>
+      <li><a href="https://www.npmjs.com/package/cordova-android">cordova-android</a> <strong>6.4.0+</strong> (recommended 7+)</li>
       <li><a href="https://www.npmjs.com/package/cordova-ios">cordova-ios</a> <strong>4.4.0+</strong> (recommended 4.5+)</li>
     </ul>
   </li>
