Add "Min requirements" updates in release notes

--- a/cordova/v1.x/index.html
+++ b/cordova/v1.x/index.html
@@ -1095,6 +1095,7 @@ Please see the description of the UI functions <a href="#module_ScanbotSdkUi.sta
       <li>Upgraded Google Support Libs to v27 (e.g. <code class="highlighter-rouge">com.android.support:appcompat-v7:27.1.1</code>, etc)</li>
       <li>Improvement in Camera UI: Replaced the user guidance <code class="highlighter-rouge">Toast</code> messages with a <code class="highlighter-rouge">TextView</code> (provides smoother updates of the hints).</li>
       <li>Bugfix: Minor fixes and improvements in Camera UI and Cropping UI</li>
+      <li>Min requirements changed: <a href="https://www.npmjs.com/package/cordova-android">cordova-android@6.4.0</a> or higher is required now.</li>
     </ul>
   </li>
   <li>iOS:
