Add link for release history for version 1.x

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1850,6 +1850,9 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
   <li>Minor bug fixes and improvements</li>
 </ul>
 
+<h4 id="release-history-for-version-1x">Release history for version 1.x</h4>
+<p>See the <a href="https://scanbotsdk.github.io/documentation/cordova/v1.x/#releaseHistory">v1.x documentation</a></p>
+
 <p><a name="librariesLicenses"></a></p>
 <h3 id="libraries-and-licenses">Libraries and Licenses</h3>
 
