Update cordova docs for the bugfix release v2.0.1

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -415,6 +415,7 @@ There will be no log files created by the Scanbot SDK plugin.</p>
 
 <p><strong>Please note:</strong> While it may be useful for development, <strong>consider switching logging OFF in production builds</strong> for security and performance reasons!</p>
 
+<p><a name="imageQuality"></a></p>
 <h4 id="image-quality--compression">Image Quality / Compression</h4>
 <p><code class="highlighter-rouge">initializeSdk</code> can take two more optional parameters that specify the image storage format and compression for temporary images. Temporary images are all images created by the document scanner, cropping UI, as well as all image manipulation functions like <code class="highlighter-rouge">applyImageFilter</code>.</p>
 
@@ -1823,6 +1824,12 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 <h2 id="release-history">Release history</h2>
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
+
+<h5 id="201">2.0.1</h5>
+<ul>
+  <li>Fixed Typings (<code class="highlighter-rouge">index.d.ts</code>)</li>
+  <li>Android: Made code Java 1.6 compatible (<code class="highlighter-rouge">sourceCompatibility 1.6</code>)</li>
+</ul>
 
 <h5 id="200">2.0.0</h5>
 <ul>
