Update docs for releases of ScanbotSDK.Xamarin.Forms 1.0.1 and ScanbotSDK.Xamarin 1.0.1

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -330,6 +330,11 @@
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarinforms-101">ScanbotSDK.Xamarin.Forms 1.0.1</h4>
+<ul>
+  <li>Included xmldoc-style documentation into the nuget package. Now IDEs will show additional contextual help.</li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms-100">ScanbotSDK.Xamarin.Forms 1.0.0</h4>
 <p>🎉 First release of the <code class="highlighter-rouge">ScanbotSDK.Xamarin.Forms</code> Nuget package for Xamarin.Forms.</p>
 
