--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -810,6 +810,15 @@ To further improve the user experience you might want to automatically take a ph
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarin-101">ScanbotSDK.Xamarin 1.0.1</h4>
+<ul>
+  <li>Upgraded the native Scanbot Android SDK to v1.33.1:
+    <ul>
+      <li>improved disability certificate date field recognition</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin-100">ScanbotSDK.Xamarin 1.0.0</h4>
 <p>🎉 First release of the new universal <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> Nuget package for Xamarin.Android and Xamarin.iOS.</p>
 
