--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1845,6 +1845,11 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="203">2.0.3</h5>
+<ul>
+  <li>iOS: Fixed a bug in PDF creation: Improved image loading for PDF and OCR.</li>
+</ul>
+
 <h5 id="202">2.0.2</h5>
 <ul>
   <li>iOS: Fix property mapping of text key <code class="highlighter-rouge">textHintOK</code></li>
