--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1848,6 +1848,7 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 <h5 id="203">2.0.3</h5>
 <ul>
   <li>iOS: Fixed a bug in PDF creation: Improved image loading for PDF and OCR.</li>
+  <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.3</li>
 </ul>
 
 <h5 id="202">2.0.2</h5>
