Update react native docs for the bugfix release v2.0.1

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1324,6 +1324,17 @@ where 100 means the least quality loss.</p>
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="201">2.0.1</h5>
+<ul>
+  <li>iOS:
+    <ul>
+      <li>Fixed a bug in PDF creation</li>
+      <li>Fixed property mapping of text key <code class="highlighter-rouge">textHintOK</code></li>
+    </ul>
+  </li>
+  <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.3</li>
+</ul>
+
 <h5 id="200">2.0.0</h5>
 <ul>
   <li>New Document Scanner UI and Cropping UI - based on the native <strong>Ready-To-Use UI Components</strong> of the Scanbot SDK for Android and iOS.</li>
