--- a/cordova/index.html
+++ b/cordova/index.html
@@ -346,13 +346,7 @@ Call the initialization after the ‘deviceready’ event has been fired.</p>
 </div>
 
 <h4 id="license-key">License Key</h4>
-<p>You can test all Scanbot SDK plugin features and develop your apps without a license.
-However, if you do not specify the license key when initializing the SDK, it will work in <strong>trial mode (trial period of 1 minute)</strong>.
-To get another trial period you have to restart your app.</p>
-
-<p>If this is not enough for you, contact us at <a href="mailto:sdk@scanbot.io">sdk@scanbot.io</a> and we’ll give you a free no strings attached 
-trial license for a longer period. In order to run the Scanbot SDK plugin functionality within your production app you have 
-to purchase and use a valid Scanbot SDK license.</p>
+<p>In order to run the Scanbot SDK plugin functionality within your production app you have to purchase and use a valid Scanbot SDK license.</p>
 
 <p>Each license key is valid only for a given app bundle identifier. The license also defines which modules you are allowed to use. 
 The usage of unlicensed modules will log an error to the console and terminate the app. If your license has expired any calls 
@@ -382,17 +376,22 @@ of the Scanbot SDK plugin will terminate your app.</p>
 </code></pre>
 </div>
 
-<h4 id="purchase-a-license">Purchase a License</h4>
+<h4 id="trial-license">Trial License</h4>
+<p>The Scanbot SDK will run without a license for one minute per session!
+To get an unrestricted “no-strings-attached” 30 day trial license, please submit the <a href="https://scanbot.io/sdk/trial.html">Trial License Form</a> on our website.</p>
+
+<p>Please kindly note that a trial license can only be used in a <strong>development and staging environment</strong>. 
+You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a trial license.</p>
+
+<h4 id="purchase-a-production-license">Purchase a Production License</h4>
 <p>You can check and purchase the Scanbot SDK licenses here: <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a>.</p>
 
-<p>To request a trial license for a longer period or purchase a production license you have to provide us the bundle identifier of your app.
-Please find this identifier in the <code class="highlighter-rouge">config.xml</code> file of your app project:
-<code class="highlighter-rouge">&lt;widget id="my.awesome.app.id" ...&gt;</code></p>
+<h4 id="app-identifier">App Identifier</h4>
+<p>Every app has a unique identifier (sometimes also known as “bundle identifier” or “application ID”). Your license will be bound to this identifier.
+To request a trial license or purchase a production license you have to provide us the bundle identifier of your app.
+Please find this identifier in the <code class="highlighter-rouge">config.xml</code> file of your app project:</p>
 
-<h4 id="trial-licenses">Trial Licenses</h4>
-<p>You can get a free no strings attached trial license. 
-Please kindly note that this license can only be used in a <strong>development and staging environment</strong>. 
-You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a <strong>trial license</strong>.</p>
+<p><code class="highlighter-rouge">&lt;widget id="my.awesome.app.id" ...&gt;</code></p>
 
 <h4 id="logging">Logging</h4>
 <p>When initializing the Scanbot SDK you can enable logging of the SDK. By default logging is disabled.</p>
@@ -1845,10 +1844,17 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="204">2.0.4</h5>
+<ul>
+  <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.33.1</li>
+  <li>Android: Various bug fixes and improvements in methods <code class="highlighter-rouge">getFilteredDocumentPreviewUri()</code> and <code class="highlighter-rouge">applyImageFilterOnPage()</code></li>
+  <li>iOS: Added the <code class="highlighter-rouge">?minihash=</code> query parameter in result of <code class="highlighter-rouge">getFilteredDocumentPreviewUri()</code></li>
+</ul>
+
 <h5 id="203">2.0.3</h5>
 <ul>
-  <li>iOS: Fixed a bug in PDF creation: Improved image loading for PDF and OCR.</li>
   <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.3</li>
+  <li>iOS: Fixed a bug in PDF creation: Improved image loading for PDF and OCR.</li>
 </ul>
 
 <h5 id="202">2.0.2</h5>
