Fixed some links in RN docs.

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -706,7 +706,7 @@ If the result of the <code class="highlighter-rouge">successCallback</code> retu
 </code></pre>
 </div>
 
-<p><a name="module_ScanbotSdkUi.startCroppingScreen"></a></p>
+<p><a name="module_ScanbotSdk.UI.startCroppingScreen"></a></p>
 <h3 id="cropping-ui">Cropping UI</h3>
 <h4 id="scanbotsdkuistartcroppingscreenpage-page-options-croppingscreenconfiguration"><code class="highlighter-rouge">ScanbotSdk.UI.startCroppingScreen(page: Page, options: CroppingScreenConfiguration)</code></h4>
 
@@ -778,7 +778,7 @@ It uses the edge detection algorithm of the Scanbot SDK and containts some smart
 </code></pre>
 </div>
 
-<p><a name="module_ScanbotSdkUi.startBarcodeScanner"></a></p>
+<p><a name="module_ScanbotSdk.UI.startBarcodeScanner"></a></p>
 <h3 id="barcode-and-qr-code-scanning-ui">Barcode and QR Code Scanning UI</h3>
 <h4 id="scanbotsdkuistartbarcodescannerconfiguration-barcodescannerconfiguration-promise"><code class="highlighter-rouge">ScanbotSdk.UI.startBarcodeScanner(configuration: BarcodeScannerConfiguration): Promise</code></h4>
 
@@ -875,7 +875,7 @@ It uses the edge detection algorithm of the Scanbot SDK and containts some smart
 </code></pre>
 </div>
 
-<p><a name="module_ScanbotSdkUi.startMrzScanner"></a></p>
+<p><a name="module_ScanbotSdk.UI.startMrzScanner"></a></p>
 <h3 id="machine-readable-zone-scanner">Machine-readable Zone Scanner</h3>
 <h4 id="scanbotsdkuistartmrzscannerconfiguration-mrzscannerconfiguration"><code class="highlighter-rouge">ScanbotSdk.UI.startMrzScanner(configuration: MrzScannerConfiguration)</code></h4>
 
