--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1844,6 +1844,20 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="205">2.0.5</h5>
+<ul>
+  <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.33.3
+    <ul>
+      <li>Removed the <code class="highlighter-rouge">allowBackup</code> flag from <code class="highlighter-rouge">AndroidManifest.xml</code> in <code class="highlighter-rouge">io.scanbot:sdk-package-ui</code> library</li>
+    </ul>
+  </li>
+  <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.4
+    <ul>
+      <li>Fixed memory leaks in Document Scanner</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="204">2.0.4</h5>
 <ul>
   <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.33.1</li>
