Update react native docs for the bugfix release v2.0.2

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1295,6 +1295,22 @@ where 100 means the least quality loss.</p>
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="202">2.0.2</h5>
+<ul>
+  <li>Android: Various bug fixes and improvements in methods <code class="highlighter-rouge">getFilteredDocumentPreviewUri()</code> and <code class="highlighter-rouge">applyImageFilterOnPage()</code></li>
+  <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.33.3
+    <ul>
+      <li>Removed the <code class="highlighter-rouge">allowBackup</code> flag from <code class="highlighter-rouge">AndroidManifest.xml</code> in <code class="highlighter-rouge">io.scanbot:sdk-package-ui</code> library</li>
+    </ul>
+  </li>
+  <li>iOS: Added the <code class="highlighter-rouge">?minihash=</code> query parameter in result of <code class="highlighter-rouge">getFilteredDocumentPreviewUri()</code></li>
+  <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.4
+    <ul>
+      <li>Fixed memory leaks in Document Scanner</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="201">2.0.1</h5>
 <ul>
   <li>iOS:
