Update docs for release v1.0.2 of ScanbotSDK.Xamarin and ScanbotSDK.Xamarin.Forms

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -138,15 +138,11 @@ As value describe why your app wants to access the device’s camera.</li>
 </ul>
 
 <h4 id="license-key">License Key</h4>
-<p>You can test all Scanbot SDK features and develop your app without a license key.
-However, if you do not specify the license key when initializing the SDK, it will work in <strong>trial mode (trial period of 1 minute)</strong>.
-To get another trial period you have to restart your app.</p>
+<p>In order to run the Scanbot SDK functionality within your production app you have to purchase and use a valid Scanbot SDK license.</p>
 
-<p>If this is not enough for you, contact us at <a href="mailto:sdk@scanbot.io">sdk@scanbot.io</a> and we’ll give you a free no strings attached trial license for a longer period. In order to run the Scanbot SDK functionality within your production app you have to purchase and use a valid Scanbot SDK license.</p>
-
-<p>Each license key is valid only to your apps bundle identifier. The license also defines which modules you are allowed to use. The usage of unlicensed modules will log an error to the console and terminate the app. If your license has expired any calls of the Scanbot SDK API will terminate your app.</p>
-
-<p>You can check and purchase the Scanbot SDK licenses here: <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a>.</p>
+<p>Each license key is valid only for a given app bundle identifier. The license also defines which modules you are allowed to use. 
+The usage of unlicensed modules will log an error to the console and terminate the app. If your license has expired any calls 
+of the Scanbot SDK will terminate your app.</p>
 
 <p>Example code for defining and using the license key string:</p>
 
@@ -170,14 +166,22 @@ To get another trial period you have to restart your app.</p>
 </code></pre>
 </div>
 
-<h4 id="trial-licenses">Trial Licenses</h4>
-<p>You can get a free no strings attached trial license.
-Please kindly note that this license can only be used in a <strong>development and staging environment</strong>.
-You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a <strong>trial license</strong>.</p>
+<h4 id="trial-license">Trial License</h4>
+<p>The Scanbot SDK will run without a license for one minute per session!
+To get an unrestricted “no-strings-attached” 30 day trial license, please submit the <a href="https://scanbot.io/sdk/trial.html">Trial License Form</a> on our website.</p>
+
+<p>Please kindly note that a trial license can only be used in a <strong>development and staging environment</strong>. 
+You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a trial license.</p>
+
+<h4 id="purchase-a-production-license">Purchase a Production License</h4>
+<p>You can check and purchase the Scanbot SDK licenses here: <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a>.</p>
+
+<h4 id="app-identifier">App Identifier</h4>
+<p>Every app has a unique identifier (sometimes also known as “bundle identifier” or “application ID”). Your license will be bound to this identifier.
+To request a trial license or purchase a production license you have to provide us the bundle identifier of your app.</p>
 
 <h4 id="updating-the-license-in-production-apps">Updating the license in production apps</h4>
-<p><strong>Please note:</strong> 
-To renew an expired license or extend a valid license with new Scanbot SDK features, you will have to update your app in the App Store/ Play Store. 
+<p>To renew an expired license or extend a valid license with new Scanbot SDK features, you will have to update your app in the App Store / Play Store. 
 The expiration date and the feature list of a license are an encrypted data part of the license key string. 
 Which means a renewal or extension of a license will cause a new license key string to be generated.</p>
 
