--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -330,6 +330,20 @@
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarin-102">ScanbotSDK.Xamarin 1.0.2</h4>
+<ul>
+  <li>Upgraded the native Scanbot Android SDK to v1.33.3:
+    <ul>
+      <li>Removed the obsolete <code class="highlighter-rouge">allowBackup</code> flag from <code class="highlighter-rouge">AndroidManifest.xml</code> of the SDK</li>
+    </ul>
+  </li>
+  <li>Upgraded the native Scanbot iOS SDK to v1.7.4:
+    <ul>
+      <li>Fixed memory leaks in Document Scanner</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms-101">ScanbotSDK.Xamarin.Forms 1.0.1</h4>
 <ul>
   <li>Included xmldoc-style documentation into the nuget package. Now IDEs will show additional contextual help.</li>
