--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -810,11 +810,27 @@ To further improve the user experience you might want to automatically take a ph
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarin-102">ScanbotSDK.Xamarin 1.0.2</h4>
+<ul>
+  <li>Upgraded the native Scanbot Android SDK to v1.33.3:
+    <ul>
+      <li>Minor fixes and improvements in <code class="highlighter-rouge">EditPolygonImageView</code></li>
+      <li>Removed the obsolete <code class="highlighter-rouge">allowBackup</code> flag from <code class="highlighter-rouge">AndroidManifest.xml</code> of the SDK</li>
+    </ul>
+  </li>
+  <li>Upgraded the native Scanbot iOS SDK to v1.7.4:
+    <ul>
+      <li>Fixed a bug where <code class="highlighter-rouge">SBSDKIndexedImageStorage</code> removes image files not properly</li>
+      <li>Fixed memory leaks in <code class="highlighter-rouge">SBSDKUIDocumentScannerViewController</code> and <code class="highlighter-rouge">SBSDKScannerViewController</code></li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin-101">ScanbotSDK.Xamarin 1.0.1</h4>
 <ul>
   <li>Upgraded the native Scanbot Android SDK to v1.33.1:
     <ul>
-      <li>improved disability certificate date field recognition</li>
+      <li>Improved disability certificate date field recognition</li>
     </ul>
   </li>
 </ul>
