Update docs for release v1.0.3 of ScanbotSDK.Xamarin and ScanbotSDK.Xamarin.Forms

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -330,7 +330,12 @@
 
 <h3 id="release-history">Release history</h3>
 
-<h4 id="scanbotsdkxamarin-102">ScanbotSDK.Xamarin 1.0.2</h4>
+<h4 id="scanbotsdkxamarinforms-103">ScanbotSDK.Xamarin.Forms 1.0.3</h4>
+<ul>
+  <li>Under the hood: Upgraded to <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.0.3</li>
+</ul>
+
+<h4 id="scanbotsdkxamarinforms-102">ScanbotSDK.Xamarin.Forms 1.0.2</h4>
 <ul>
   <li>Upgraded the native Scanbot Android SDK to v1.33.3:
     <ul>
