--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -810,6 +810,21 @@ To further improve the user experience you might want to automatically take a ph
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarin-103">ScanbotSDK.Xamarin 1.0.3</h4>
+<ul>
+  <li>Android:
+    <ul>
+      <li>Fixed an issue with file handling in method <code class="highlighter-rouge">SBSDK.WriteTiff()</code></li>
+      <li>Improved handling of input image file URIs</li>
+    </ul>
+  </li>
+  <li>iOS:
+    <ul>
+      <li>Improved handling of input image file URLs</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin-102">ScanbotSDK.Xamarin 1.0.2</h4>
 <ul>
   <li>Upgraded the native Scanbot Android SDK to v1.33.3:
