Update react native docs for the bugfix release v2.0.3

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1295,6 +1295,11 @@ where 100 means the least quality loss.</p>
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="203">2.0.3</h5>
+<ul>
+  <li>New function <code class="highlighter-rouge">recognizeMrz(imageFileUri: string)</code> to recognize MRZ data on image file.</li>
+</ul>
+
 <h5 id="202">2.0.2</h5>
 <ul>
   <li>Android: Various bug fixes and improvements in methods <code class="highlighter-rouge">getFilteredDocumentPreviewUri()</code> and <code class="highlighter-rouge">applyImageFilterOnPage()</code></li>
