Update docs for ScanbotSDK.Xamarin.Forms v1.0.4

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -73,7 +73,10 @@ It contains modules which are individually licensable as license packages.
 For more details visit our website <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a></p>
 
 <h3 id="requirements">Requirements</h3>
-<p><a href="https://www.visualstudio.com">Microsoft Visual Studio</a> with <a href="https://www.xamarin.com">Xamarin Platform</a></p>
+<ul>
+  <li>Latest version of <a href="https://visualstudio.microsoft.com/xamarin/">Microsoft Visual Studio</a> with Xamarin Platform</li>
+  <li>For Xamarin.Forms projects: Xamarin.Forms v2.2+ or v3.x</li>
+</ul>
 
 <h3 id="supported-mobile-platforms">Supported mobile platforms</h3>
 <ul>
