--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -330,6 +330,11 @@
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarinforms-104">ScanbotSDK.Xamarin.Forms 1.0.4</h4>
+<ul>
+  <li>Fixed an issue on Android with starting Scanbot SDK Activities on some devices with Android 6.0.x (<a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/issues/2">#2</a>)</li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms-103">ScanbotSDK.Xamarin.Forms 1.0.3</h4>
 <ul>
   <li>Under the hood: Upgraded to <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.0.3</li>
