--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -98,19 +98,57 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
 <p>The Scanbot SDK is provided as NuGet packages</p>
 
 <ul>
-  <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin">ScanbotSDK.Xamarin</a> - contains the ScanbotSDK Xamarin wrappers for Android and iOS</li>
+  <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin">ScanbotSDK.Xamarin</a> - contains the ScanbotSDK Xamarin bindings and wrappers for Android and iOS</li>
   <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin.Forms">ScanbotSDK.Xamarin.Forms</a> - provides portable ScanbotSDK wrappers for use with Xamarin.Forms</li>
 </ul>
 
-<p>Install ScanbotSDK.Xamarin.Forms if your project is based on Xamarin.Forms, otherwise install ScanbotSDK.Xamarin.</p>
+<p>Install <code class="highlighter-rouge">ScanbotSDK.Xamarin.Forms</code> if your project is based on Xamarin.Forms, otherwise install <code class="highlighter-rouge">ScanbotSDK.Xamarin</code>.</p>
 
-<p>You can directly install them in Xamarin Studio IDE.
-Open your App-Solution in Xamarin Studio, select your iOS or Android project and click on the menu item <em>Project -&gt; Add NuGet Packages</em>.<br />
+<p>You can directly install them in Visual Studio IDE.
+Open your App-Solution in Visual Studio, select your iOS or Android project and click on the menu item <em>Project -&gt; Add NuGet Packages</em>.<br />
 Make sure <strong>nuget.org</strong> is selected as source and search for the package.</p>
 
 <p>By clicking on <em>Add Package</em> the Scanbot SDK will be downloaded and installed into your project. Do that for both your iOS and Android projects.
-Also, ScanbotSDK.Xamarin.Forms must be installed in the portable app project (if one exists - not necessary if you’re using a shared project).
-You are now ready to use Scanbot SDK in your code.</p>
+Also, ScanbotSDK.Xamarin.Forms must be installed in the portable app project (if one exists - not necessary if you’re using a shared project).</p>
+
+<h4 id="android-settings">Android settings</h4>
+
+<p><strong>Enable Multi-Dex</strong></p>
+
+<p><em>Android Project</em> =&gt; <em>Options</em> =&gt; <em>Android Build</em> =&gt; <em>General</em> =&gt; <strong>Enable Multi-Dex</strong></p>
+
+<p><img src="./assets/images/xamarin_android_multidex_settings.png" alt="alt" title="Xamarin Android Multi-Dex Settings" /></p>
+
+<p><strong>ABI Settings</strong></p>
+
+<p>The Scanbot SDK uses native libraries under the hood and supports following <a href="https://developer.android.com/ndk/guides/arch.html">ABIs</a>: <code class="highlighter-rouge">armeabi-v7a</code>, <code class="highlighter-rouge">arm64-v8a</code> and <code class="highlighter-rouge">x86</code>.</p>
+
+<p>Please adjust the <strong>Supported ABIs</strong> configuration in your Android project settings accordingly:</p>
+
+<p><em>Android Project</em> =&gt; <em>Options</em> =&gt; <em>Android Build</em> =&gt; <em>Advanced</em> =&gt; <strong>Supported ABIs</strong> …</p>
+
+<p><img src="./assets/images/xamarin_android_abi_settings.png" alt="alt" title="Xamarin Android ABI Settings" /></p>
+
+<p><strong>Please note:</strong> Typically the <code class="highlighter-rouge">x86</code> architecture can be removed for the release (production) build, since it’s used for emulators. 
+Also, by removing the <code class="highlighter-rouge">x86</code> architecture the size of the app package (APK) will be reduced.</p>
+
+<p>Furthermore please increase the <strong>Java Heap Size</strong> value to min. <strong>2G</strong>. For some projects it is even recommended to use <strong>4G</strong>.</p>
+
+<p><strong>ProGuard</strong></p>
+
+<p>If you need to enable <a href="https://docs.microsoft.com/en-us/xamarin/android/deploy-test/release-prep/proguard">ProGuard</a> for your Android build, 
+please check <a href="https://github.com/doo/Scanbot-SDK-Examples/wiki/ProGuard">this full list of the ProGuard rules for the Scanbot SDK</a>.</p>
+
+<h4 id="ios-settings">iOS settings</h4>
+<p>You have to adjust the <strong>“Linker behavior”</strong> settings in your iOS project:</p>
+
+<p><em>iOS Project</em> =&gt; <em>Options</em> =&gt; <em>iOS Build</em> =&gt; <em>Linker behavior</em> =&gt; Change to <strong>“Link Framework SDKs Only”</strong></p>
+
+<p>Make sure to apply the settings for <em>iPhone</em> and <em>iPhoneSimulator</em> (via “Platform” drop-down) as well as for <em>Debug</em> and <em>Release</em> configurations (via “Configuration” drop-down)!</p>
+
+<p><img src="./assets/images/xamarin_ios_linker_settings.png" alt="alt" title="Xamarin iOS Linker Settings" /></p>
+
+<p>You can also compare the settings to our example apps on GitHub.</p>
 
 <h4 id="permissions">Permissions</h4>
 <p><strong>Required permissions for Android</strong></p>
