update release notes

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1844,6 +1844,16 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="206">2.0.6</h5>
+<ul>
+  <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.34.0
+    <ul>
+      <li>Upgraded OpenCV to 3.4.2</li>
+    </ul>
+  </li>
+  <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.6</li>
+</ul>
+
 <h5 id="205">2.0.5</h5>
 <ul>
   <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.33.3
