--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1298,6 +1298,13 @@ where 100 means the least quality loss.</p>
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="204">2.0.4</h5>
+<ul>
+  <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.34.0</li>
+  <li>Upgraded to OpenCV 3.4.2</li>
+  <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.6</li>
+</ul>
+
 <h5 id="203">2.0.3</h5>
 <ul>
   <li>New function <code class="highlighter-rouge">recognizeMrz(imageFileUri: string)</code> to recognize MRZ data on image file.</li>
