--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1844,6 +1844,15 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="207">2.0.7</h5>
+<ul>
+  <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.7
+    <ul>
+      <li>Fixed bitcode generation</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="206">2.0.6</h5>
 <ul>
   <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.34.0
@@ -2260,7 +2269,7 @@ Tesseract, maintained by Google (http://code.google.com/p/tesseract-ocr/),
 
 
 
-Open Source libraries used in the Scanbot SDK for iOS version 1.7.6:
+Open Source libraries used in the Scanbot SDK for iOS version 1.7.7:
 
 BOOST C++ Libraries version 1.68
 This library is distributed under the terms of the following license: https://www.boost.org/LICENSE_1_0.txt
