Update Xamarin and Xamarin.Forms docs for v1.0.6

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -330,6 +330,11 @@
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarinforms-106">ScanbotSDK.Xamarin.Forms 1.0.6</h4>
+<ul>
+  <li>Under the hood: Upgraded to <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.0.6</li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms-105">ScanbotSDK.Xamarin.Forms 1.0.5</h4>
 <ul>
   <li>Under the hood: Upgraded to <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.0.5</li>
