--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -810,6 +810,11 @@ To further improve the user experience you might want to automatically take a ph
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarin-106">ScanbotSDK.Xamarin 1.0.6</h4>
+<ul>
+  <li>Upgraded the native Scanbot iOS SDK to v1.7.7</li>
+</ul>
+
 <h4 id="scanbotsdkxamarin-105">ScanbotSDK.Xamarin 1.0.5</h4>
 <ul>
   <li>Upgraded the native Scanbot Android SDK to v1.34.0:
@@ -817,7 +822,7 @@ To further improve the user experience you might want to automatically take a ph
       <li>Upgraded to OpenCV 3.4.2</li>
     </ul>
   </li>
-  <li>Upgraded the native Scanbot iOS SDK to v1.7.6:</li>
+  <li>Upgraded the native Scanbot iOS SDK to v1.7.6</li>
 </ul>
 
 <h4 id="scanbotsdkxamarin-103">ScanbotSDK.Xamarin 1.0.3</h4>
