Update Xamarin and Xamarin.Forms docs for v1.0.7

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -330,6 +330,12 @@
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarinforms-107">ScanbotSDK.Xamarin.Forms 1.0.7</h4>
+<ul>
+  <li>Fixed an issue on iOS with opening RTU UI modal (<a href="https://github.com/doo/scanbot-sdk-example-xamarin-forms/issues/5">#5</a>)</li>
+  <li>Under the hood: Upgraded to <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.0.7</li>
+</ul>
+
 <h4 id="scanbotsdkxamarinforms-106">ScanbotSDK.Xamarin.Forms 1.0.6</h4>
 <ul>
   <li>Under the hood: Upgraded to <code class="highlighter-rouge">ScanbotSDK.Xamarin</code> v1.0.6</li>
