--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -810,6 +810,15 @@ To further improve the user experience you might want to automatically take a ph
 
 <h3 id="release-history">Release history</h3>
 
+<h4 id="scanbotsdkxamarin-107">ScanbotSDK.Xamarin 1.0.7</h4>
+<ul>
+  <li>Upgraded the native Scanbot iOS SDK to v1.7.8:
+    <ul>
+      <li>See the full <a href="https://scanbotsdk.github.io/documentation/ios/release-history.html">Changelog</a> of the native Scanbot iOS SDK</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin-106">ScanbotSDK.Xamarin 1.0.6</h4>
 <ul>
   <li>Upgraded the native Scanbot iOS SDK to v1.7.7</li>
