Update the release history link of Android SDK.

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1896,7 +1896,7 @@ Please note that only the <strong>new created</strong> image files will contain 
   <li>🚙 Under the hood:
     <ul>
       <li>Upgraded the native Scanbot iOS SDK to v1.8.0 (see the <a href="https://scanbotsdk.github.io/documentation/ios/release-history.html">changelog</a>)</li>
-      <li>Upgraded the native Scanbot Android SDK to v1.37.0 (see the <a href="https://github.com/doo/Scanbot-SDK-Examples#changelog-of-the-scanbot-sdk-for-android">changelog</a>)</li>
+      <li>Upgraded the native Scanbot Android SDK to v1.37.0 (see the <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/Release-History">changelog</a>)</li>
     </ul>
   </li>
 </ul>
