update cordova docs for v2.1.1

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1871,6 +1871,22 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="211">2.1.1</h5>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android: Fixed a bug with freezing camera on Document Scanner start.</li>
+      <li>Android: Some layout fixes in Cropping UI (aka. inaccessible “DONE” button).</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Upgraded the native Scanbot Android SDK to v1.38.2 (see the <a href="https://github.com/doo/scanbot-sdk-example-android/wiki/Release-History">changelog</a>).</li>
+      <li>The native Scanbot Android SDK now uses the latest version of Google Play Services Vision lib v16.2.0 (<code class="highlighter-rouge">com.google.android.gms:play-services-vision:16.2.0</code>).</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="210">2.1.0</h5>
 <ul>
   <li>🎉 NEW:
